# cookiecutter-with-rust

./: README.md  cookiecutter.json
{{cookiecutter.project_slug | replace('-', '_')}}/: .gitignore  Dockerfile  MANIFEST.in  README.md  bumpver.toml  dev-requirements.txt  pre-commit-config.yaml  pyproject.toml  setup.py
{{cookiecutter.project_slug | replace('-', '_')}}/{{ cookiecutter.project_slug | replace('-', '_') }}_rust_files/: Cargo.toml
{{cookiecutter.project_slug | replace('-', '_')}}/{{ cookiecutter.project_slug | replace('-', '_') }}_rust_files/src/: lib.rs
{{cookiecutter.project_slug | replace('-', '_')}}/{{cookiecutter.project_slug | replace('-', '_')}}_files/: __init__.py
